Game recompiled to work without preview features